--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -2,7 +2,7 @@
 <hr>
 <div class='container-sm'>
 
-  <div class="card-body d-flex flex-column align-items-center">
+  <div class='card-body d-flex flex-column align-items-center'>
 {{#each tweets as |tweet|}}
  <a href='/tweet/{{tweet.id}}'> <div class='container mb-4 blog'>
    
